Added page objects

--- a/Sia12.csproj
+++ b/Sia12.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="99.0.4844.5100" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="PageObjects\AdressesOverview\Address\" />
+  </ItemGroup>
+
 </Project>
